CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.4 )

project(LSRender)

ADD_DEFINITIONS(-D _CRT_SECURE_NO_WARNINGS)

SET(LS_INCLUDE include)
SET(LS_SRC src)

SET(LSRENDER_OUTPUT_LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
SET(LSRENDER_OUTPUT_EXE_DIR ${CMAKE_SOURCE_DIR}/bin)

SET(EXECUTABLE_OUTPUT_PATH ${LSRENDER_OUTPUT_EXE_DIR})
SET(LIBRARY_OUTPUT_PATH ${LSRENDER_OUTPUT_LIB_DIR})

include_directories(${LS_INCLUDE})
include_directories(dependences)
link_directories(dependences/lib)
link_directories(${LSRENDER_OUTPUT_LIB_DIR})





FILE(GLOB ALGORITHM_HEADER ${LS_INCLUDE}/algorithm/*.h)
FILE(GLOB CAMERA_HEADER ${LS_INCLUDE}/camera/*.h)
FILE(GLOB FILM_HEADER ${LS_INCLUDE}/film/*.h)
FILE(GLOB CONFIG_HEADER ${LS_INCLUDE}/config/*.h)
FILE(GLOB FUNCTION_HEADER ${LS_INCLUDE}/function/*.h)
FILE(GLOB LIGHT_HEADER ${LS_INCLUDE}/light/*.h)
FILE(GLOB MATERIAL_HEADER ${LS_INCLUDE}/material/*.h)
FILE(GLOB MATH_HEADER ${LS_INCLUDE}/math/*.h)
FILE(GLOB MESH_HEADER ${LS_INCLUDE}/mesh/*.h)
FILE(GLOB RECORD_HEADER ${LS_INCLUDE}/record/*.h)
FILE(GLOB SAMPLER_HEADER ${LS_INCLUDE}/sampler/*.h)
FILE(GLOB SCATTER_HEADER ${LS_INCLUDE}/scatter/*.h)
FILE(GLOB SCENE_HEADER ${LS_INCLUDE}/scene/*.h)
FILE(GLOB SPECTRUM_HEADER ${LS_INCLUDE}/spectrum/*.h)
FILE(GLOB TEXTURE_HEADER ${LS_INCLUDE}/texture/*.h)
FILE(GLOB 3RD_HEADER ${LS_INCLUDE}/3rd/*.*)
FILE(GLOB RESOURCE_HEADER ${LS_INCLUDE}/resource/*.*)
FILE(GLOB PREVIEWER_HEADER ${LS_INCLUDE}/previewer/*.*)

SET(LS_HEADER 
    ${ALGORITHM_HEADER} 
    ${CAMERA_HEADER} 
    ${CONFIG_HEADER}
    ${FILM_HEADER} 
    ${FUNCTION_HEADER} 
    ${LIGHT_HEADER} 
    ${MATERIAL_HEADER} 
    ${MATH_HEADER} 
    ${MESH_HEADER} 
    ${RECORD_HEADER} 
    ${SAMPLER_HEADER} 
    ${SCATTER_HEADER} 
    ${SCENE_HEADER} 
    ${SPECTRUM_HEADER} 
    ${TEXTURE_HEADER}
    ${3RD_HEADER} 
    ${RESOURCE_HEADER}
	${PREVIEWER_HEADER}) 



SOURCE_GROUP("algorithm" FILES ${ALGORITHM_HEADER})
SOURCE_GROUP("camera" FILES ${CAMERA_HEADER})
SOURCE_GROUP("config" FILES ${CONFIG_HEADER})
SOURCE_GROUP("film" FILES ${FILM_HEADER})
SOURCE_GROUP("function" FILES ${FUNCTION_HEADER})
SOURCE_GROUP("light" FILES ${LIGHT_HEADER})
SOURCE_GROUP("material" FILES ${MATERIAL_HEADER})
SOURCE_GROUP("math" FILES ${MATH_HEADER})
SOURCE_GROUP("mesh" FILES ${MESH_HEADER})
SOURCE_GROUP("record" FILES ${RECORD_HEADER})
SOURCE_GROUP("sampler" FILES ${SAMPLER_HEADER})
SOURCE_GROUP("scatter" FILES ${SCATTER_HEADER})
SOURCE_GROUP("scene" FILES ${SCENE_HEADER})
SOURCE_GROUP("spectrum" FILES ${SPECTRUM_HEADER})
SOURCE_GROUP("texture" FILES ${TEXTURE_HEADER})
SOURCE_GROUP("3rd" FILES ${3RD_HEADER})
SOURCE_GROUP("resource" FILES ${RESOURCE_HEADER})
SOURCE_GROUP("previewer" FILES ${PREVIEWER_HEADER})


FILE(GLOB ALGORITHM_SOURCE ${LS_SRC}/algorithm/*.cpp)
FILE(GLOB CAMERA_SOURCE ${LS_SRC}/camera/*.cpp)
FILE(GLOB CONFIG_SOURCE ${LS_SRC}/config/*.cpp)
FILE(GLOB FILM_SOURCE ${LS_SRC}/film/*.cpp)
FILE(GLOB FUNCTION_SOURCE ${LS_SRC}/function/*.cpp)
FILE(GLOB LIGHT_SOURCE ${LS_SRC}/light/*.cpp)
FILE(GLOB MATERIAL_SOURCE ${LS_SRC}/material/*.cpp)
FILE(GLOB MATH_SOURCE ${LS_SRC}/math/*.cpp)
FILE(GLOB MESH_SOURCE ${LS_SRC}/mesh/*.cpp)
FILE(GLOB RECORD_SOURCE ${LS_SRC}/record/*.cpp)
FILE(GLOB SAMPLER_SOURCE ${LS_SRC}/sampler/*.cpp)
FILE(GLOB SCATTER_SOURCE ${LS_SRC}/scatter/*.cpp)
FILE(GLOB SCENE_SOURCE ${LS_SRC}/scene/*.cpp)
FILE(GLOB SPECTRUM_SOURCE ${LS_SRC}/spectrum/*.cpp)
FILE(GLOB TEXTURE_SOURCE ${LS_SRC}/texture/*.cpp)
FILE(GLOB 3RD_SOURCE ${LS_SRC}/3rd/*.*)
FILE(GLOB RESOURCE_SOURCE ${LS_SRC}/resource/*.*)
FILE(GLOB PREVIEWER_SOURCE ${LS_SRC}/previewer/*.*)

SET(LS_SOURCE
    ${ALGORITHM_SOURCE} 
    ${CAMERA_SOURCE}
    ${CONFIG_SOURCE} 
    ${FILM_SOURCE} 
    ${FUNCTION_SOURCE} 
    ${LIGHT_SOURCE} 
    ${MATERIAL_SOURCE} 
    ${MATH_SOURCE} 
    ${MESH_SOURCE} 
    ${RECORD_SOURCE} 
    ${SAMPLER_SOURCE} 
    ${SCATTER_SOURCE} 
    ${SCENE_SOURCE} 
    ${SPECTRUM_SOURCE} 
    ${TEXTURE_SOURCE} 
    ${3RD_SOURCE}
    ${RESOURCE_SOURCE}
	${PREVIEWER_SOURCE})


SOURCE_GROUP("algorithm" FILES ${ALGORITHM_SOURCE})
SOURCE_GROUP("camera" FILES ${CAMERA_SOURCE})
SOURCE_GROUP("config" FILES ${CONFIG_SOURCE})
SOURCE_GROUP("film" FILES ${FILM_SOURCE})
SOURCE_GROUP("function" FILES ${FUNCTION_SOURCE})
SOURCE_GROUP("light" FILES ${LIGHT_SOURCE})
SOURCE_GROUP("material" FILES ${MATERIAL_SOURCE})
SOURCE_GROUP("math" FILES ${MATH_SOURCE})
SOURCE_GROUP("mesh" FILES ${MESH_SOURCE})
SOURCE_GROUP("record" FILES ${RECORD_SOURCE})
SOURCE_GROUP("sampler" FILES ${SAMPLER_SOURCE})
SOURCE_GROUP("scatter" FILES ${SCATTER_SOURCE})
SOURCE_GROUP("scene" FILES ${SCENE_SOURCE})
SOURCE_GROUP("spectrum" FILES ${SPECTRUM_SOURCE})
SOURCE_GROUP("texture" FILES ${TEXTURE_SOURCE})
SOURCE_GROUP("3rd" FILES ${3RD_SOURCE})
SOURCE_GROUP("resource" FILES ${RESOURCE_SOURCE})
SOURCE_GROUP("previewer" FILES ${PREVIEWER_SOURCE})


ADD_LIBRARY(lsrender STATIC 
    ${LS_SOURCE}
    ${LS_HEADER})

ADD_EXECUTABLE(lsrender_exe src/main.cpp)

SET_TARGET_PROPERTIES(lsrender_exe PROPERTIES OUTPUT_NAME lsrender)
TARGET_LINK_LIBRARIES(lsrender_exe lsrender embree3)

